--- a/public/index.html
+++ b/public/index.html
@@ -1,15 +1,47 @@
-<!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width initial-scale=1.0" />
-    <title>GOLDEN KTV</title>
-    <link rel="stylesheet" href="/style.css" />
+<!doctype html>
+<html lang="en">
+<head>
+  <title>Interactive Breakout</title>
+  <link rel="stylesheet" href="css/main_page.css" />
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/mobile-detect/1.4.3/mobile-detect.min.js"></script>
+</head>
+<body>
+  <div class="desktop" id="desktop-container">
+      <div class="main">
+        <div class="container">
+          <div class="row">
+            <h1>Interactive Breakout</h1>
+          </div>
+          <div class="row">
+            <h2>a multiplayer webgame</h2>
+            <a id="play-game" href="display/" class="button"><button>Play game!<span class="button-sub"></span></button></a>
+          </div>
+        </div>
+      </div>
+  </div>
 
-    <script src="https://static.opentok.com/v2/js/opentok.min.js"></script>
-    <script defer src="/bundle.js"></script>
-  </head>
-  <body>
-    <div id="app"></div>
-  </body>
+  <div class="mobile" id="mobile-container">
+    <div class="container">
+      <div class="row">
+        <div class="content columns two" role="main">
+          <h2>Interactive Breakout</h2>
+          <a id = play href="controller/" class="button"><button>Play<span class="button-sub"></span></button></a>
+        </div>
+      </div>
+    </div>
+  </div>
+
+  <script>
+    const md = new MobileDetect(window.navigator.userAgent);
+    $(document).ready(function() {
+      if (md.phone() !== null) {
+        $('#mobile-container').show();
+      } else {
+        $('#desktop-container').show();
+      }
+    });
+  </script>
+
+</body>
 </html>
